--- a/docs/global.css
+++ b/docs/global.css
@@ -2,6 +2,10 @@
     color: rgb(233, 71, 71);
 }
 
+.md-header__button.md-logo img, .md-header__button.md-logo svg {
+    height: 2.5rem;
+}
+
 h3 {
     color: rgb(233, 71, 71);
 }
