--- a/docs/global.css
+++ b/docs/global.css
@@ -38,3 +38,9 @@
     font-size: 16px;
     font-weight: 600;
 }
+
+code.invert {
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    font-weight: bold;
+}
